# nibbler

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  pyproject.toml
nibbler/: __init__.py  annotations.py  config.py  constants.py  containers.py  util.py
nibbler/extension/: constantize_globals.py  debug.py  global_to_fast.py  inline.py  integrity_check.py  map_source.py  peephole.py  precompute_conditionals.py
tests/: test_context.py  test_inline.py  test_map_source.py  test_mixed.py  test_precompute_if.py
