[tool.poetry]
name = "nibbler"
version = "0.1.2"
description = "Runtime bytecode optimizer."
authors = ["Philip Trauner <philip.trauner@arztpraxis.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
uncompyle6 = "^3.2"
black = "^18.9b0"

[tool.poetry.dev-dependencies]
pre-commit = "^1.14"
pytest = "^4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
